# breakout

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  clone_deps.py  readme.md  resource.aps  resource.rc
config/: config.ini  texts.ini
src/: breakout.cpp  main.cpp
